Enlarged window minimize bug fixed, font colors no longer directly altered through js (added .thisOn instead), info text width on works page reduced to avoid overlap with images in smaller width screens.

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@
 html{
     width: 100%;
     height: 100%;
-    color: rgb(40, 24, 32);
     scroll-behavior: smooth;
 }
 @keyframes loadSlide{
@@ -56,6 +55,23 @@ body{
     -moz-box-shadow: inset 0px -81px 87px -86px rgba(0,0,0,0.69);
     box-shadow: inset 0px -81px 87px -86px rgba(0,0,0,0.69);
 }
+
+/*LOAD SCREEN*/
+div#loadScreen{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+    text-align: center;
+}
+div#loadScreen img{
+    width: 100%;
+    height: 100%;
+}
+/*-----------*/
+
 /*WORK WINDOW ANIMATION*/
 div#center.original{
     height: auto;
@@ -127,22 +143,28 @@ div.bar div.left.margin-adjust{
     margin-top: 15px;
     margin-right: 26px;
 }
-div.barButt h3:hover{
-    color: rgb(184, 0, 56);
-}
-.empty{
-    width: 100%;
-    min-width: 100%;
-    display: block;
-    height: 25px;
-}
-
 div.min{
     float: right;
     min-width: 20px;
     min-height: 15px;
     margin-right: 14px;
     border-bottom: 2px solid rgb(100, 100, 100);
+}
+div.barButt h3:hover, div.min:hover{
+    color: rgb(184, 0, 56);
+    border-bottom: 2px solid rgb(184, 0, 56);
+}
+span.highlight, div.donwload, div.downloa h3{
+    color: rgb(184, 0, 56);
+}
+h3.thisOn, div.barButt h3.thisOn:hover{
+    color: rgb(248, 248, 248);
+}
+.empty{
+    width: 100%;
+    min-width: 100%;
+    display: block;
+    height: 25px;
 }
 div#homeC, div#aboutC, div#contactC, div#worksC{
     display: block;
@@ -310,7 +332,7 @@ div.download, .download h3{
     display: inline;
     width: auto;
 }
-h1, h2, h3{
+h1, h2{
     color: rgb(20, 20, 20);
 }
 #content p{
