--- a/css/works.css
+++ b/css/works.css
@@ -55,7 +55,7 @@ iframe{
 }
 div.infoTxt{
     display: inline-block;
-    width: 35vw;
+    width: 32vw;
     max-width: 420px;
     padding: 0;
     height: auto;
